# stepit-projects

./: ._.gitignore  .gitignore  readme.md
Dictionary/: Dictionary.csproj  Dictionary.sln  DictionaryService.cs  Menu.cs  Program.cs  Transilation.cs  WordDictionary.cs  english-russian.json  readme.md
Dictionary/Classes/: Config.cs  DictionaryService.cs  DictionaryUI.cs  Menu.cs  Translation.cs  UserInput.cs  WordDictionary.cs
Dictionary/Data/: english-russian.csv  english-spanish.csv  russian-english.csv  spanish-english
Monefy/: App.xaml  App.xaml.cs  Monefy.csproj  Monefy.sln
Monefy/Enums/: ExpenseCategoryEnum.cs  IncomeCategoryEnum.cs  Interval.cs  TransactionTypeEnum.cs
Monefy/Messages/: DataMessage.cs  NavigationMessage.cs
Monefy/Models/: Category.cs  Expense.cs  IData.cs  Icon.cs  Income.cs  Transaction.cs
Monefy/ViewModels/: AddTransactionViewModel.cs  AnalyticsViewModel.cs  HomeViewModel.cs  MainViewModel.cs  TransactionsViewModel.cs
Monefy/Views/: AddTransactionView.xaml  AddTransactionView.xaml.cs  AnalyticsView.xaml  AnalyticsView.xaml.cs  HomeView.xaml  HomeView.xaml.cs  MainView.xaml  MainView.xaml.cs  TransactionsView.xaml  TransactionsView.xaml.cs
PersonalFinance/: Account.cpp  Account.h  CMakeLists.txt  Card.cpp  Card.h  FinanceManager.cpp  FinanceManager.h  Transaction.cpp  Transaction.h  Wallet.cpp  Wallet.h  main.cpp
WarehouseMS/: WarehouseMS.sln
WarehouseMS/WarehouseMS.Domain/: Class1.cs  WarehouseMS.Domain.csproj
sea-battle/: main.cpp
todo-app/: ManageTask.cpp  ManageTask.h  SortTask.cpp  SortTask.h  main.cpp  task.h
(+196 files in other folders)
